# ansara_task

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requests.http
ansara_task/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: urls.py  views.py
tasks/: models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_comment.py
templates/: index.html  tasks.html
users/: serializers.py  urls.py
users/migrations/: 0001_initial.py
